--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -417,7 +417,7 @@ ul#nav li.current a { color: #F06000; }
 /* ------------------------------------------------------------------ */
 
 #portfolio {
-   background: #ebeeee;
+   background: #000000;
    padding-top: 90px;
    padding-bottom: 60px;
 }
